# ChangeLog for dev-java/servletapi
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/servletapi/ChangeLog,v 1.46 2006/12/09 09:37:33 flameeyes Exp $

  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  servletapi-2.2-r3.ebuild:
  Add ~x86-fbsd keyword.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  servletapi-2.2-r2.ebuild, servletapi-2.2-r3.ebuild,
  servletapi-2.3-r2.ebuild, servletapi-2.3-r3.ebuild,
  servletapi-2.4-r2.ebuild, servletapi-2.4-r3.ebuild,
  servletapi-2.4-r4.ebuild:
  Dropping sparc keywords, see #96229

  10 Sep 2006; Joshua Nichols <nichoj@gentoo.org> servletapi-2.3-r3.ebuild,
  servletapi-2.4-r4.ebuild:
  Added ~ia64 keywords.

  09 Sep 2006; William L. Thomson Jr.<wltjr@gentoo.org> metadata.xml:
  Updated metadata to reflect new package maintainer, me ;)

*servletapi-2.4-r4 (03 Sep 2006)

  03 Sep 2006; William L. Thomson Jr.<wltjr@gentoo.org> +servletapi-2.4-r4.ebuild:
  Updated to latest Tomcat sources 5.5.17. Stopped using patch temporarily.

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  servletapi-2.3-r3.ebuild, servletapi-2.4-r3.ebuild:
  Add ~x86-fbsd keyword.

  21 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  servletapi-2.2-r3.ebuild, servletapi-2.3-r3.ebuild,
  servletapi-2.4-r3.ebuild:
  Added java-ant-2 to inherit.

*servletapi-2.4-r3 (20 Jul 2006)
*servletapi-2.3-r3 (20 Jul 2006)
*servletapi-2.2-r3 (20 Jul 2006)

  20 Jul 2006; Joshua Nichols <jnichols@gentoo.org>
  +servletapi-2.2-r3.ebuild, +servletapi-2.3-r3.ebuild,
  +servletapi-2.4-r3.ebuild:
  Revision bumps to use new Java system.

  27 Dec 2005; Thomas Matthijs <axxo@gentoo.org> servletapi-2.2-r2.ebuild,
  servletapi-2.3-r2.ebuild, servletapi-2.4-r2.ebuild:
  Correct description

  07 Aug 2005; Petteri Räty <betelgeuse@gentoo.org>
  servletapi-2.2-r2.ebuild, servletapi-2.3-r2.ebuild:
  Updated DEPEND to >=virtual/jdk-1.4 because package org.xml.sax is needed to