@@ -1,6 +1,15 @@
 # ChangeLog for dev-java/servletapi
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/servletapi/ChangeLog,v 1.46 2006/12/09 09:37:33 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/servletapi/ChangeLog,v 1.47 2006/12/10 21:51:03 wltjr Exp $
+
+*servletapi-2.4-r5 (10 Dec 2006)
+
+  10 Dec 2006; William L. Thomson Jr. <wltjr@gentoo.org>
+  -servletapi-2.4-r3.ebuild, -servletapi-2.4-r4.ebuild,
+  +servletapi-2.4-r5.ebuild:
+  Updated 2.4 to latest tomcat sources, package needs to be renamed and
+  versioned accordingly. Starting to have issues with it being out of sync
+  with Tomcat
 
   09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
   servletapi-2.2-r3.ebuild:
